[package]
name = "kusa_pixel"
version = "3.0.0"
authors = ["むずでょ <muzudho1@gmail.com>"]
edition = "2018"
description = """
A pixel art painter for people who are sick of GUIs.
"""
readme = "README.md"
repository = "https://github.com/muzudho/kusa-pixel"
license = "MIT"
keywords = [] # https://crates.io/keywords
categories = ["game-development", "graphics"] # https://crates.io/category_slugs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.3"

# settings
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"

# piston
piston_window = "0.120.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.32.0"
piston2d-sprite = "0.64.0"
piston2d-drag_controller = "0.30.0"
piston2d-deform_grid = "0.10.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
camera_controllers = "0.32.0"
rand = "0.8.3"
shader_version = "0.7.0"
